chore: publish pages